objects/cwbtool__ErrorLog__c/fields/cwbtool__ErrorType__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ErrorType__c</fullName>
    <description>Type of exception, such as DmlException, ListException, MathException, and so on.</description>
    <inlineHelpText>Type of exception, such as DmlException, ListException, MathException, and so on.</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>