objects/cwbtool__ErrorLog__c/fields/cwbtool__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__LineNumber__c</fullName>
    <description>Line Number from where the exception was thrown.</description>
    <inlineHelpText>Line Number from where the exception was thrown.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>