objects/cwbtool__ErrorLog__c/fields/cwbtool__Message__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Message__c</fullName>
    <description>Error Message that displays for the user.</description>
    <inlineHelpText>Error Message that displays for the user.</inlineHelpText>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>