objects/cwbtool__ErrorLog__c/fields/cwbtool__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__StackTrace__c</fullName>
    <description>Detailed stack trace showing additional error information</description>
    <inlineHelpText>Detailed stack trace showing additional error information</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>