objects/cwbtool__ErrorLog__c/fields/Http_Request__c.field-meta.xml
<CustomField>
    <fullName>Http_Request__c</fullName>
    <label>Http Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>