objects/cwbtool__ErrorLog__c/fields/Http_Response__c.field-meta.xml
<CustomField>
    <fullName>Http_Response__c</fullName>
    <label>Http Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>