objects/cwbtool__ErrorLog__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>